--- a/styles/port.css
+++ b/styles/port.css
@@ -40,8 +40,9 @@
     }
     .small_screen .close {
         display: block;
-        font-size: 25px;
+        font-size: 28px;
         background: black;
+        padding: 4px 8px;
         color: red;
         float: right;
         margin-left: 5em;
